# jsonschema-annotator

./: CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE  README.md  cliff.toml  justfile
examples/: config.toml  schema.json
src/: error.rs  format.rs  lib.rs  main.rs
src/annotator/: mod.rs  toml.rs  yaml.rs
src/annotator/snapshots/: jsonschema_annotator__annotator__toml__tests__append_to_existing_comments.snap  jsonschema_annotator__annotator__toml__tests__deeply_nested.snap  jsonschema_annotator__annotator__toml__tests__description_only.snap  jsonschema_annotator__annotator__toml__tests__include_default_value.snap  jsonschema_annotator__annotator__toml__tests__long_description_wrapping.snap  jsonschema_annotator__annotator__toml__tests__nested_table.snap  jsonschema_annotator__annotator__toml__tests__no_matching_annotations.snap  jsonschema_annotator__annotator__toml__tests__preserve_existing_comments.snap  jsonschema_annotator__annotator__toml__tests__replace_existing_comments.snap  jsonschema_annotator__annotator__toml__tests__simple_annotation.snap  jsonschema_annotator__annotator__toml__tests__skip_existing_comments.snap  jsonschema_annotator__annotator__toml__tests__title_only.snap  jsonschema_annotator__annotator__yaml__tests__append_to_existing_comments.snap  jsonschema_annotator__annotator__yaml__tests__deeply_nested.snap  (+9 more)
src/schema/: annotation.rs  mod.rs  parser.rs  refs.rs
src/snapshots/: jsonschema_annotator__tests__annotate_toml.snap  jsonschema_annotator__tests__annotate_with_refs.snap  jsonschema_annotator__tests__annotate_yaml.snap
