[package]
name = "jsonschema-annotator"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Luke Frisken"]
description = "Annotate YAML and TOML configuration files with comments from JSON Schema"
repository = "https://github.com/kellpossible/jsonschema-annotator"

[dependencies]
schemars = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml_edit = "0.22"
yaml-edit = "0.1"
clap = { version = "4.5", features = ["derive"] }
textwrap = "0.16"

[dev-dependencies]
insta = "1.42"
